Fix broken paragraph wrap

--- a/app/assets/stylesheets/front/3_content_blocks/paragraph-block.sass
+++ b/app/assets/stylesheets/front/3_content_blocks/paragraph-block.sass
@@ -8,4 +8,3 @@
   letter-spacing: 0.18px
   margin-top: 0.5em
   margin-bottom: 0.5em
-  overflow: hidden
